tests/typing/error-bad_cstr_arity/error.smt2
(set-logic QF_UFDT)
(declare-datatypes ((list 1)) ((par (alpha) ((nil) (cons (head (list alpha)))))))
